--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 15px auto;
   display: block;
   width: 200px;
-  border: 8px solid #2c2f3f;
+  border: 5px solid #003887;
 }
 #header .profile h1 {
   font-size: 30px;
@@ -108,7 +108,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.3s;
 }
 #header .profile .social-links a:hover {
-  background: #14c6dd;
+  background: #003887;
   color: #fff;
   text-decoration: none;
   
@@ -177,9 +177,9 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 9998;
   border: 0;
   font-size: 24px;
-  transition: all 0.4s;
+  transition: all 1s;
   outline: none !important;
-  background-color: #149ddd;
+  /* background-color: #149ddd; */
   color: #fff;
   width: 40px;
   height: 40px;
@@ -228,12 +228,14 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   line-height: 56px;
   color: #fff;
+  font-family: 'Blinker', sans-serif;
+  letter-spacing: 5px;
 }
 #hero p {
   color: #fff;
   margin-bottom: 50px;
   font-size: 26px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Blinker', sans-serif;
 }
 #hero p span {
   color: #fff;
@@ -248,7 +250,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 768px) {
   #hero h1 {
-    font-size: 28px;
+    font-size: 38px;
     line-height: 36px;
   }
   #hero h2 {
